# toolkit-collatz-conjecture

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: benchmark.rs  core.rs  main.rs  plotter.rs  tree.rs
