[package]
name = "collatz_conjecture"
version = "0.1.0"
authors = ["Cyprien Borée"]
edition = "2021"
description = "Rust application to play with the Collatz Conjecture"
readme = "README.md"
repository = "https://github.com/boreec/collatz-conjecture"
keywords = ["collatz_conjecture", "benchmark", "plot"]
categories = [
  "algorithms",
  "command-line-utilities",
  "mathematics",
  "visualization"
]
publish = false

[dependencies]
clap = {version = "4.3.19", features = ["derive"]}
petgraph = "0.6.3"
plotters = "0.3.5"
